--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:all": "concurrently \"bun run dev:webhook\" \"bun run dev\"",
+    "dev:webhook": "ngrok http --url=crow-curious-louse.ngrok-free.app 3000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -39,9 +41,15 @@
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@tanstack/react-query": "5.65.1",
+    "@trpc/client": "11.0.0-rc.730",
+    "@trpc/react-query": "11.0.0-rc.730",
+    "@trpc/server": "11.0.0-rc.730",
     "class-variance-authority": "^0.7.1",
+    "client-only": "^0.0.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "concurrently": "9.1.2",
     "date-fns": "^4.1.0",
     "dotenv": "16.4.7",
     "drizzle-orm": "0.39.0",
@@ -56,7 +64,9 @@
     "react-hook-form": "^7.55.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.1",
+    "server-only": "^0.0.1",
     "sonner": "^2.0.3",
+    "svix": "^1.63.1",
     "tailwind-merge": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
