--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "concurrently": "9.1.2",
-    "date-fns": "^4.1.0",
+    "date-fns": "3.6.0",
     "dotenv": "16.4.7",
     "drizzle-orm": "0.39.0",
     "drizzle-zod": "0.7.0",
@@ -67,7 +67,7 @@
     "next": "15.1.6",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
-    "react-day-picker": "^8.10.1",
+    "react-day-picker": "^9.6.7",
     "react-dom": "^19.0.0",
     "react-error-boundary": "5.0.0",
     "react-hook-form": "^7.55.0",
